--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -57,3 +57,9 @@
     color: white;
     display: none;
 }
+.sign {
+    border: 1px solid rgb(201, 136, 51);
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
