--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -5,7 +5,7 @@
     padding: 5px 10px 0px 10px;
     align-items: center;
     color:rgb(201, 136, 51);
-    background-color: black;
+    background-color: #fff;
     position: sticky;
     top: 0;
     z-index: 9999;
@@ -21,14 +21,15 @@
     margin: 0px 10px 0px 10px;
     cursor: pointer;
     transition: 1s color;
-    transition: 1s font-size;
+    transition: 1s color;
     color: rgb(201, 136, 51);
     text-decoration: none;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .navcontainer ul li:hover, .link:hover {
-    text-decoration: underline;
-    color: rgb(201, 136, 51);
-    font-size: 18px;
+
+    color: rgb(161, 201, 51);
+   
 }
 .navcontainer h1{
     margin: 0px 0px 0px 0px ;
