--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -50,7 +50,7 @@
     align-items: center;
 border-radius: 10px;
 background-color: white;
-
+overflow: hidden; 
 border: 1px solid black;
 }
 .form {
@@ -60,16 +60,18 @@ width: 100%;
 .input input, .input button {
     padding: 20px;
     border: none;
+    
 }
 .input input{
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   width: 90%;
 }
-.input button {
+ .button {
     background-color: rgb(165, 101, 42);
     border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  height: 100%;
 }
 footer p {
     text-align: center;
